--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-VariableFont_wght.ttf
+
+    - family: Dongle
+      fonts:
+        - asset: assets/fonts/Dongle-Regular.ttf
+
+    - family: Bungee
+      fonts:
+        - asset: assets/fonts/Bungee-Regular.ttf
+
+    - family: PressStart
+      fonts:
+        - asset: assets/fonts/PressStart2P-Regular.ttf
+
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
